--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ body{
 	min-height: 100vh;
 	display: flex;
 	align-items: center;
-	background-image: url('../img/header.jpg');
+	background-image: url(header.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
